2001-02-20  Kenichi OKADA <okada@opaopa.org>

	* SLIM: Version 1.14.6 released.

2001-02-20  Kenichi OKADA <okada@opaopa.org>

	* tests/test-sasl.el(test-sasl-ntlm-imap): Fix
	`sasl-read-passphrase'

2001-02-20  Kenichi OKADA <okada@opaopa.org>

	* tests/test-sasl.el(test-sasl-ntlm-imap): Change name.
	Delete wrong lines.

2001-02-20  Taro Kawagishi <taro.kawagishi@nokia.com>

	* tests/test-sasl.el(test-sasl-digest-ntlm-imap): New test.

2001-02-17  Kenichi OKADA <okada@opaopa.org>

	* sasl-ntlm.el(sasl-ntlm-response): self-Hash.

2001-02-17  Kenichi OKADA <okada@opaopa.org>

	* ntlm.el(smb-passwd-hash): Fix `upcase' for XEmacs.

2001-02-17  Kenichi OKADA <okada@opaopa.org>

	* ntlm.el(TopLevel): Require `poem'
	(ntlm-build-auth-request): Omit `request-bufIndex'
	(ntlm-build-auth-response): Omit `response', `ident' and `msgType'
	Use `string-as-unibyte' of `poem'.

2001-02-17  Kenichi OKADA <okada@opaopa.org>

	* sasl-scram.el(sasl-scram-md5-parse-server-msg-1): Error
	if server's response cannot be parsed.

2001-02-17  Kenichi OKADA <okada@opaopa.org>

	* sasl-scram.el(sasl-scram-md5-server-salt): New function.
	(sasl-scram-md5-response-2): Use `sasl-scram-md5-server-salt'

2001-02-17  Kenichi OKADA <okada@opaopa.org>

	* sasl-scram.el(sasl-scram-md5-make-unique-nonce): Rewrite.

2001-02-17  Kenichi OKADA <okada@opaopa.org>

	* sasl-scram.el: Add comment.
	(sasl-scram-md5-steps): New variable.
	(sasl-scram-md5-make-client-msg-1): Add optional nonce.
	(sasl-scram-md5-make-client-msg-2): New function.
	(sasl-scram-md5-make-server-msg-2): Rewrite.
	(sasl-scram-md5-response-1): New function.
	(sasl-scram-md5-response-2): New function.
	(sasl-scram-md5-authenticate-server): New function.
	* test/test-sasl.el(test-sasl-scram-md5-imap): New function.

2001-02-16  Kenichi OKADA <okada@opaopa.org>

	* sasl-scram.el: rename from scram-md5.el
	(TopLevel): Provide `sasl-scram'.
	Fix prefix.
	Fix comments.
	require `sasl'.
	(sasl-scram-make-unique-nonce): use `sasl-unique-id'.